--- a/embed.html
+++ b/embed.html
@@ -39,6 +39,17 @@
 </style>
 </head>
 <body>
-  </div>
+ 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-1869455728729943"
+     data-ad-slot="6069586186"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+ 
+</script>
 </body>
 </html>
