--- a/embed.html
+++ b/embed.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Penguado Embed</title>
+<style>
+  * { box-sizing: border-box; margin: 0; padding: 0; }
+  body {
+    font-family: 'Roboto', sans-serif;
+    background: #ffffff;
+    color: #00695c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
+  }
 
+  .embed-container {
+    width: 100%;
+    max-width: 728px; /* typical ad width */
+    height: 90vh;
+    background: linear-gradient(135deg, #1abc9c, #00acc1);
+    border-radius: 20px;
+    box-shadow: 0 10px 35px rgba(0,0,0,0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 1rem;
+  }
+</style>
+</head>
+<body>
+  </div>
+</body>
+</html>
