--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
      crossorigin="anonymous"></script>
+<meta name='admaven-placement' content=Bqja9pdg7>
 	
 <link rel="icon" type="image/png" href="https://i.ibb.co/v6hRy4d3/Penguado-Favicon-Bright.png">
 
