Hilltopads index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+	
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
      crossorigin="anonymous"></script>	
 <link rel="icon" type="image/png" href="https://i.ibb.co/v6hRy4d3/Penguado-Favicon-Bright.png">
@@ -480,5 +482,16 @@
   }
 </style>
 
-
+<script>
+(function(wjlei){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = wjlei || {};
+s.src = "\/\/mildgive.com\/bzX.VNsXdGGgl\/0XYkWgcq\/ie\/mz9kuYZbUalEkOPETCYv2lNcTBca2jMlTGMZtpNojwYp1uNCzYYNx\/NtAO";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 </html>
