--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@
 </style>
 
 <script>
-(function(wjlei){
+(function(jwafe){
 var d = document,
     s = d.createElement('script'),
     l = d.scripts[d.scripts.length - 1];
-s.settings = wjlei || {};
-s.src = "\/\/mildgive.com\/bzX.VNsXdGGgl\/0XYkWgcq\/ie\/mz9kuYZbUalEkOPETCYv2lNcTBca2jMlTGMZtpNojwYp1uNCzYYNx\/NtAO";
+s.settings = jwafe || {};
+s.src = "\/\/mildgive.com\/b.XQVZsgdTGhlD0\/YZWicg\/OeWmu9SuWZGUSlhk\/PcT\/YA2-NNT\/cI2UO\/DnM\/tnNejqY-1oN\/z\/Y\/4MNhAE";
 s.async = true;
 s.referrerPolicy = 'no-referrer-when-downgrade';
 l.parentNode.insertBefore(s, l);
