--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@ l.parentNode.insertBefore(s, l);
 })({})
 </script>
 
+	<script>
+(function(ktqk){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = ktqk || {};
+s.src = "\/\/mildgive.com\/bOXHVysad.Ghl\/0oYOWccr\/eeImK9NuTZTULlMk\/PZTvYC2JNTTBcF2HOAD\/k\/tzNBj\/YB1ANmzVY\/5hMxA-";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+
 	
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
