--- a/index.html
+++ b/index.html
@@ -2,21 +2,6 @@
 <html lang="en">
 <head>
 
-	<script>
-(function(bekinwo){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = bekinwo || {};
-s.src = "\/\/silkyspite.com\/c-D.9J6\/bd2C5KlLSJWgQ\/9zN\/jMYy1WNSzIYj4cNjyE0C2vN\/jdUi3INAj\/gd4p";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
-
-	
-
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
      crossorigin="anonymous"></script>	
 <link rel="icon" type="image/png" href="https://i.ibb.co/v6hRy4d3/Penguado-Favicon-Bright.png">
@@ -496,12 +481,48 @@ l.parentNode.insertBefore(s, l);
 </style>
 
 <script>
-(function(jwafe){
+(function(jkzyl){
 var d = document,
     s = d.createElement('script'),
     l = d.scripts[d.scripts.length - 1];
-s.settings = jwafe || {};
-s.src = "\/\/mildgive.com\/b.XQVZsgdTGhlD0\/YZWicg\/OeWmu9SuWZGUSlhk\/PcT\/YA2-NNT\/cI2UO\/DnM\/tnNejqY-1oN\/z\/Y\/4MNhAE";
+s.settings = jkzyl || {};
+s.src = "\/\/mildgive.com\/bwXbVOsad.G-l\/0KYFWFcC\/Xe\/mn9SubZJUmlRkLPeTMYe2ANtTncp2GOPDGMAtPN\/jKYx1\/NJzSYt4\/NmAl";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+	<script>
+(function(jkzyl){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = jkzyl || {};
+s.src = "\/\/mildgive.com\/bwXbVOsad.G-l\/0KYFWFcC\/Xe\/mn9SubZJUmlRkLPeTMYe2ANtTncp2GOPDGMAtPN\/jKYx1\/NJzSYt4\/NmAl";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+	<script>
+(function(jkzyl){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = jkzyl || {};
+s.src = "\/\/mildgive.com\/bwXbVOsad.G-l\/0KYFWFcC\/Xe\/mn9SubZJUmlRkLPeTMYe2ANtTncp2GOPDGMAtPN\/jKYx1\/NJzSYt4\/NmAl";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+	<script>
+(function(jkzyl){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = jkzyl || {};
+s.src = "\/\/mildgive.com\/bwXbVOsad.G-l\/0KYFWFcC\/Xe\/mn9SubZJUmlRkLPeTMYe2ANtTncp2GOPDGMAtPN\/jKYx1\/NJzSYt4\/NmAl";
 s.async = true;
 s.referrerPolicy = 'no-referrer-when-downgrade';
 l.parentNode.insertBefore(s, l);
