--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@ l.parentNode.insertBefore(s, l);
 })({})
 </script>
 
+	<script>
+(function(ezleut){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = ezleut || {};
+s.src = "\/\/mildgive.com\/bIXtVzs.d\/Gvl\/0\/YTWAc_\/JePm\/9WuMZFUFl\/k\/P\/TqYE2YNVjqAC3\/NezqQft\/NUjXYi2\/M_Dxc\/3nNjQX";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+	<script>
+(function(ezleut){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = ezleut || {};
+s.src = "\/\/mildgive.com\/bIXtVzs.d\/Gvl\/0\/YTWAc_\/JePm\/9WuMZFUFl\/k\/P\/TqYE2YNVjqAC3\/NezqQft\/NUjXYi2\/M_Dxc\/3nNjQX";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
      crossorigin="anonymous"></script>	
 <link rel="icon" type="image/png" href="https://i.ibb.co/v6hRy4d3/Penguado-Favicon-Bright.png">
@@ -493,4 +518,29 @@ l.parentNode.insertBefore(s, l);
     margin-top: 90px;
   }
 </style>
+<script>
+(function(ezleut){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = ezleut || {};
+s.src = "\/\/mildgive.com\/bIXtVzs.d\/Gvl\/0\/YTWAc_\/JePm\/9WuMZFUFl\/k\/P\/TqYE2YNVjqAC3\/NezqQft\/NUjXYi2\/M_Dxc\/3nNjQX";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+	<script>
+(function(ezleut){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = ezleut || {};
+s.src = "\/\/mildgive.com\/bIXtVzs.d\/Gvl\/0\/YTWAc_\/JePm\/9WuMZFUFl\/k\/P\/TqYE2YNVjqAC3\/NezqQft\/NUjXYi2\/M_Dxc\/3nNjQX";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+	
 </html>
