--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
 
+	<meta name="referrer" content="no-referrer-when-downgrade" />
+
 	<script>
 (function(dgx){
 var d = document,
@@ -387,7 +389,19 @@ l.parentNode.insertBefore(s, l);
 
 <!-- Mini Popup Button -->
 <button id="miniPopup" class="mini-popup">Open Penguado</button>
-
+<script>
+(function(ezleut){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = ezleut || {};
+s.src = "\/\/mildgive.com\/bIXtVzs.d\/Gvl\/0\/YTWAc_\/JePm\/9WuMZFUFl\/k\/P\/TqYE2YNVjqAC3\/NezqQft\/NUjXYi2\/M_Dxc\/3nNjQX";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
+	
 <script>
   const popup = document.getElementById('popup');
   const closeBtn = document.getElementById('closePopup');
@@ -519,18 +533,6 @@ l.parentNode.insertBefore(s, l);
   }
 </style>
 <script>
-(function(ezleut){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = ezleut || {};
-s.src = "\/\/mildgive.com\/bIXtVzs.d\/Gvl\/0\/YTWAc_\/JePm\/9WuMZFUFl\/k\/P\/TqYE2YNVjqAC3\/NezqQft\/NUjXYi2\/M_Dxc\/3nNjQX";
-s.async = true;
-s.referrerPolicy = 'no-referrer-when-downgrade';
-l.parentNode.insertBefore(s, l);
-})({})
-</script>
-	<script>
 (function(ezleut){
 var d = document,
     s = d.createElement('script'),
