--- a/ads/in-page-ad.html
+++ b/ads/in-page-ad.html
@@ -8,8 +8,10 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
+      margin: 100 px;
       padding: 20px;
+      marin-left: 100px;
+      margin-right: 100px;
     }
     .ad-container {
       margin: 20px auto;
@@ -18,24 +20,14 @@
       padding: 10px;
     }
     #ad-sidebar-left {
-      float: left;
-      width: 200px;
-      margin-right: 20px;
+      float: right;
+      width: 800px;
+      margin-left: 20px;
     }
     #ad-sidebar-right {
       float: right;
-      width: 200px;
+      width: 800px;
       margin-left: 20px;
-    }
-    #content {
-      max-width: 600px;
-      margin: auto;
-      overflow: hidden;
-    }
-    footer {
-      clear: both;
-      text-align: center;
-      margin-top: 40px;
     }
   </style>
 </head>
@@ -65,20 +57,6 @@
         })();
       </script>
   </div>
-
-  <!-- Main Content -->
-  <div id="content">
-    <!-- Middle of Content -->
-    <div id="ad-middle" class="ad-container">
-      <script>
-        (function(){
-          var d=document,s=d.createElement('script');
-          s.src="//mildgive.com/b.XfVZswd-GOlF0xYPWvcg/OePmO9IuTZvUrl/kaPNTAYz2/NKjFAm4jNwDFQMtvNSjSYS2/MWDCgb0xNFQx";
-          s.async=true; s.referrerPolicy='no-referrer-when-downgrade';
-          document.currentScript.parentNode.appendChild(s);
-        })();
-      </script>
-    </div>
 
 
 </body>
