--- a/ads/in-page-ad.html
+++ b/ads/in-page-ad.html
@@ -21,13 +21,11 @@
     }
     #ad-sidebar-left {
       float: right;
-      width: 800px;
-      margin-left: 20px;
+      width: 46%;
     }
     #ad-sidebar-right {
       float: right;
-      width: 800px;
-      margin-left: 20px;
+      width: 46%;
     }
   </style>
 </head>
