--- a/ads/in-page-ad.html
+++ b/ads/in-page-ad.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="referrer" content="no-referrer-when-downgrade" />
-  <title>Ad Placement Example</title>
+  <title>Penguado Ad Placement</title>
   <link rel="icon" type="image/png" href="https://i.ibb.co/v6hRy4d3/Penguado-Favicon-Bright.png">
   <style>
     body {
