--- a/embeds/games/index.html
+++ b/embeds/games/index.html
@@ -527,7 +527,7 @@
                 document.getElementById('content-container').style.display = 'flex';
             } else {
                 // Redirect to login if not logged in
-                window.location.href = "https://html.cafe/x2e5c90e3";
+                window.location.href = "https://penguado.top/embeds/login.html";
             }
         }
 
