--- a/embeds/apps.html
+++ b/embeds/apps.html
@@ -297,7 +297,7 @@ function checkAccess() {
   if (userData && userData.uuid && userData.name) {
     showMainUI(userData.name);
   } else {
-    window.location.href = "https://html.cafe/x836352e3";
+    window.location.href = "https://penguado.top/embeds/login.html";
   }
 }
 
