--- a/embeds/video-player.html
+++ b/embeds/video-player.html
@@ -257,7 +257,7 @@ h2 {
         document.getElementById('main-content').style.display = 'flex';
       } else {
         // Redirect if not logged in
-        window.location.href = "https://html.cafe/x836352e3";
+        window.location.href = "https://penguado.top/embeds/login.html";
       }
     }
 
