--- a/embeds/games/fullscreen.html
+++ b/embeds/games/fullscreen.html
@@ -19,7 +19,7 @@
   width: 100%;
 }
 </style>
-<button class="openFullscreen" onclick="openFullscreen('https://html.cafe/x04dbd5ce')">Open Fullscreen</button>
+<button class="openFullscreen" onclick="openFullscreen('https://penguado.top/embeds/games/index.html')">Open Fullscreen</button>
 
 <script>
 function openFullscreen(url) {
