--- a/index.html
+++ b/index.html
@@ -170,30 +170,35 @@ l.parentNode.insertBefore(s, l);
     <h3>About Penguado</h3>
     <p>At Penguado, we prioritize your productivity and online safety, offering a seamless, secure browsing experience through our advanced web tools. Our innovative service allows you to access the internet with greater freedom, reaching websites and content easily. Whether you're working remotely, researching, or enjoying entertainment, we ensure that you have uninterrupted access to the sites and services you need. Our sophisticated technology is designed to protect your privacy while giving you the flexibility to navigate the web safely and with privacy.</p>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <!-- Minimal-Tracking -->
   <section class="feature">
     <h3>Minimal-Tracking Service</h3>
     <p>Your privacy is our top priority. Penguado’s service guarantees that none of your browsing data, activity logs, or personal information is stored or tracked. We believe in total transparency and strict privacy — what you do online is your business. Our secure infrastructure ensures that all traffic is encrypted and protected, giving you peace of mind while browsing. Whether you're accessing sensitive content or simply maintaining your personal access, our policy ensures that your identity and activity stay private at all times.</p>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <!-- Game Access -->
   <section class="feature">
     <h3>Game Access Feature</h3>
     <p>With our advanced game access feature, you no longer need to worry about restrictions preventing you from playing your favorite games. Whether at school, work, or any location with internet limitations, our service allows you to reach gaming platforms that might otherwise be unavailable. Play all your top titles without interruptions, enjoy smooth gameplay, and dive into multiplayer experiences, all while ensuring your connection is secure and private.</p>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <!-- Video Downloader -->
   <section class="feature">
     <h3>Video Downloader/Player</h3>
     <p>Our video downloader and player service offers a hassle-free way to save and enjoy videos from virtually any platform. From tutorials to entertainment, our service allows you to capture videos for offline viewing. Our player ensures high-quality playback with customizable settings to fit your preferences. Whether you’re looking to download videos for later or stream them directly through our player, you’ll experience flawless playback and convenience. The downloader supports a wide variety of formats, making it compatible with all your devices, whether you're at home, on the go, or at work.</p>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <!-- Free Access -->
   <section class="feature">
     <h3>Free Access & Fast Performance</h3>
     <p>Penguado is provided completely free of charge to all users. We ask that you please use our service responsibly and avoid abusing its capabilities, so it remains fast and accessible for everyone. Thanks to our commitment to keeping Penguado free of advertisements, you can enjoy a smooth and speedy browsing experience without distractions or delays. We appreciate your understanding and cooperation in helping us maintain this high-quality, ad-free service for all users.</p>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <!-- Additional Features -->
   <section class="feature">
@@ -205,6 +210,7 @@ l.parentNode.insertBefore(s, l);
       <li><strong>Technical Support:</strong>  Our team of experts is always available to assist you. Should you encounter any issues, we’re just a message away. Whether you require help troubleshooting, have questions about our services, or want advice on optimizing your experience, we’re ready to help. Contact us anytime at <a href="mailto:penguado.web@gmail.com">penguado.web@gmail.com</a>.</li>
     </ul>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <!-- Screenshots -->
   <section>
@@ -215,6 +221,7 @@ l.parentNode.insertBefore(s, l);
       <img src="https://lh3.googleusercontent.com/sitesv/AICyYdYGEAP0ll_v1cvBFCqLxNv60TKeNlsWCSEScEa6LkqZzkVmrg1yYiy4N6Ex7KdfUXZaFN_FJeqAfqdXwuytkOnmjOIYSoF_gyVmocWSWm6rq3c-iYWTB_WDDKubxixGlzmJ5QPbPXmdzuE5t3D68nZKitL4Ae5AEykFFUUB4iBUTNzrl7nFAoFZz7lo01VPHx3coa9HcevJ-0KUEayqhZJ04Sancki39NFZsH8=w1280" alt="Penguado Videos">
     </div>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <!-- Policies -->
   <section class="feature">
@@ -222,22 +229,26 @@ l.parentNode.insertBefore(s, l);
     <p>Effective Date: 7 June 2025 | Last Updated: 17 August 2025</p>
     <p>At Penguado, we respect your privacy and are committed to protecting your personal information. We collect only essential account details, such as your name, email, password (securely hashed), and a unique user identifier (UUID), along with minimal operational data like network IPs for internal purposes. Your browsing activity, searches, video plays, and game interactions are tied to your UUID, not your personal identity, ensuring complete anonymity. We use cookies and local storage solely to maintain secure sessions and improve functionality. Personal data is stored until you request deletion, and usage logs are retained for one year before permanent removal. We never sell or share your data with third parties. Users can request deletion of personal data at <a href="mailto:penguado.web@gmail.com">penguado.web@gmail.com</a>.</p>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <section class="feature">
     <h3>Terms of Service</h3>
     <p>Effective Date: 7 June 2025 | Last Updated: 17 August 2025</p>
     <p>By using Penguado’s services, you agree to lawful, responsible use of our web tools, including proxy features, gaming access, and video downloader/player services. Users must respect intellectual property rights and refrain from illegal activities, harassment, or misuse of our systems. Penguado reserves the right to monitor usage, suspend accounts, or block features to maintain a safe and compliant environment. These Terms of Service apply universally to all users, with no minimum age requirement, and continued use constitutes agreement. Misuse of our services is entirely at the user’s risk.</p>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <section class="feature">
     <h3>Cookie Policy</h3>
     <p>Penguado employs cookies and local storage technologies to enhance functionality, maintain authentication, and track website performance through tools like Google Analytics. Essential cookies ensure secure login sessions and proper operation of our services, while analytics cookies provide insight into user behavior for service improvement. Users have the ability to manage or disable cookies through browser settings, although disabling essential cookies may limit access or functionality. No cookies are used for tracking personal activity beyond operational or analytical purposes.</p>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
   <section class="feature">
     <h3>License</h3>
     <p>All Penguado code, software, designs, and related materials are proprietary and protected under U.S. and international copyright laws. Users are granted a personal, non-transferable, and non-commercial license to access and use the services for lawful purposes only. Copying, modification, redistribution, or reverse-engineering of Penguado’s code is strictly prohibited without written permission. Unauthorized use may result in suspension, legal action, and claims for damages. Penguado provides services “as is,” without warranties, and maintains the right to enforce intellectual property rights and terminate access in case of violations. Contact <a href="mailto:penguado.web@gmail.com">penguado.web@gmail.com</a> for license questions.</p>
   </section>
+	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
 </div>
 
