--- a/embeds/login.html
+++ b/embeds/login.html
@@ -249,7 +249,7 @@ async function login() {
       storeUUID(data.uuid, data.name);
       showAlert("Welcome " + data.name);
       hideLoading(); // STOP LOADING
-      window.location.href = "https://html.cafe/x88f740a9";
+      window.location.href = "https://penguado.top/embeds/login-redirect.html";
     } else {
       hideLoading(); // STOP LOADING
       if (data.message === "Penguado is currently disabled for all users.") {
