--- a/embeds/signup.html
+++ b/embeds/signup.html
@@ -370,7 +370,7 @@ a:hover { color: #00897b; }
       sessionStorage.removeItem("penguado_verification_code");
       sessionStorage.removeItem("penguado_email");
       // Redirect after everything finishes
-      window.location.href = "https://html.cafe/x2e5c90e3";
+      window.location.href = "https://penguado.top/embeds/login-redirect.html";
     }
   } else {
     showAlert("Invalid verification code. Please try again.");
