--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ l.parentNode.insertBefore(s, l);
   <!-- Free Access -->
   <section class="feature">
     <h3>Free Access & Fast Performance</h3>
-    <p>Penguado is provided completely free of charge to all users. We ask that you please use our service responsibly and avoid abusing its capabilities, so it remains fast and accessible for everyone. Thanks to our commitment to keeping Penguado free of advertisements, you can enjoy a smooth and speedy browsing experience without distractions or delays. We appreciate your understanding and cooperation in helping us maintain this high-quality, ad-free service for all users.</p>
+    <p>Penguado is provided completely free of charge to all users. We ask that you please use our service responsibly and avoid abusing its capabilities, so it remains fast and accessible for everyone. We put minimal ads on Penguado, as to cover domain costs, you can enjoy a smooth and speedy browsing experience without distractions or delays. We appreciate your understanding and cooperation in helping us maintain this high-quality, ad-free service for all users.</p>
   </section>
 	<embed src="https://penguado.top/ads/multitag-ads.html" height=100% width=100%> </embed>
 
