--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ l.parentNode.insertBefore(s, l);
 <div id="popup" class="popup">
   <div class="popup-header">
     <span>Welcome to Penguado!</span>
-    <button id="closePopup">&times; https://silkyspite.com/qH3vDo</button>
+    <button id="closePopup">&times;</button>
   </div>
   <div class="popup-body" id="popupBody">
     <p>Penguado provides secure, private, and easy-to-use web tools for browsing, gaming, and video access — keeping your data safe while giving you seamless online freedom.</p>
@@ -412,7 +412,7 @@ l.parentNode.insertBefore(s, l);
 </div>
 
 <!-- Mini Popup Button -->
-<button id="miniPopup" class="mini-popup">Open Penguado</button>
+<button id="miniPopup" class="mini-popup"  target="https://silkyspite.com/qH3vDo">Open Penguado</button>
 <script>
 (function(ezleut){
 var d = document,
