--- a/template.html
+++ b/template.html
@@ -30,13 +30,13 @@
 
     <section>
       <div class="btn-left">
-        <button class="button">Left Button</button>
+        <button class="button-outlined">Left Button</button>
       </div>
       <div class="btn-center">
-        <button class="button">Center Button</button>
+        <button class="button-outlined">Center Button</button>
       </div>
       <div class="btn-right">
-        <button class="button">Right Button</button>
+        <button class="button-outlined">Right Button</button>
       </div>
     </section>
 
