--- a/template.html
+++ b/template.html
@@ -30,15 +30,20 @@
 
     <section>
       <div class="btn-left">
-        <button class="button-outlined">Left Button</button>
+        <button class="=button">Left Button</button>
       </div>
       <div class="btn-center">
-        <button class="button-outlined">Center Button</button>
+        <button class="button">Center Button</button>
       </div>
       <div class="btn-right">
-        <button class="button-outlined">Right Button</button>
+        <button class="button">Right Button</button>
+      </div>
+      <div>
+        <button class="button-outlined">Penguado Outlined Button</button>
       </div>
     </section>
+
+    <div class="divider"></div>
 
   </main>
 
