--- a/template.html
+++ b/template.html
@@ -30,7 +30,7 @@
 
     <section>
       <div class="btn-left">
-        <button class="=button">Left Button</button>
+        <button class="button">Left Button</button>
       </div>
       <div class="btn-center">
         <button class="button">Center Button</button>
