--- a/navigation.html
+++ b/navigation.html
@@ -1,1 +1,23 @@
+<!-- navigation.html -->
+<nav class="penguado-nav">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="../main-pages/login-signup/index.html">Login & Signup</a></li>
+    <li><a href="../main-pages/profile.html">Profile</a></li>
+    <li><a href="../main-pages/about/index.html">About</a></li>
+    <li><a href="../main-pages/support-us/index.html">Support Us</a></li>
+    <li><a href="../main-pages/apps.html">Apps</a></li>
+    <li><a href="../main-pages/games.html">Games</a></li>
+    <li><a href="../main-pages/video-player/index.html">Video Player</a></li>
+    <li>
+      <a href="#">Other ▾</a>
+      <ul class="dropdown">
+        <li><a href="../main-pages/other/online-html-editor/index.html">Online HTML Editor</a></li>
+        <li><a href="../main-pages/other/alternate-links.html">Alternate Links</a></li>
+        <li><a href="../main-pages/other/disable-blocksi.html">Disable Blocksi</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
 
+<link rel="stylesheet" href="navigation.css">
