--- a/template.html
+++ b/template.html
@@ -60,13 +60,10 @@
 </body>
 
   <script>
-  window.addEventListener("scroll", function() {
-    const nav = document.querySelector(".penguado-nav");
-    if (window.scrollY > 0) {
-      nav.classList.add("scrolled");
-    } else {
-      nav.classList.remove("scrolled");
-    }
-  });
+  fetch("../navigation.html")
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById("nav-placeholder").innerHTML = data;
+    });
 </script>
 </html>
