--- a/template.html
+++ b/template.html
@@ -20,6 +20,8 @@
   </header>
 
   <!-- Content -->
+    <div class="divider"></div>
+  
   <main class="content">
 
     <section>
@@ -30,18 +32,14 @@
     <div class="divider"></div>
 
     <section>
-      <div class="btn-left">
-        <button class="button">Left Button</button>
-      </div>
       <div class="btn-center">
         <button class="button">Center Button</button>
       </div>
-      <div class="btn-right">
-        <button class="button">Right Button</button>
-      </div>
+      
       <div>
         <button class="button-outlined">Penguado Outlined Button</button>
       </div>
+      
     </section>
 
     <div class="divider"></div>
