--- a/template.html
+++ b/template.html
@@ -59,8 +59,8 @@
       <div class="text-right">
 
         <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Feedback</a></p>
-        <p><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contect</a></p>
-        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfjMeVUaN9aUJFXR7wxBV1QmOhLHVsLB8gGAzo_gd9yxWBz6Q/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Report a Bug</a></p>
+        <p><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contact us</a></p>
+        <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfjMeVUaN9aUJFXR7wxBV1QmOhLHVsLB8gGAzo_gd9yxWBz6Q/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Report a bug</a></p>
         <p><a href="../main-pages/about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
         <p><a href="../main-pages/about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
 
