--- a/template.html
+++ b/template.html
@@ -41,7 +41,7 @@
   <div class="divider"></div>
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="footer" style="font-size: 10px;">
     <div class="footer-content">
       <div class="text-left">
       
@@ -51,7 +51,7 @@
           <a href="https://penguado.top/main-pages/about/license.html" 
              style="font-weight: bold; color: #00897b; text-decoration: none;">
              View License
-          </a><br>
+          </a><br><br>
           We are working hard to improve your user experience.
         </p>
      
