--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
   <!-- Banner -->
   <header class="banner">
     <div class="banner-overlay">
-      <h1 class="page-title">Page Title</h1>
+      <h1 class="page-title">Template Page</h1>
       <div class="title-underline"></div>
     </div>
   </header>
