--- a/navigation.html
+++ b/navigation.html
@@ -1,6 +1,7 @@
 <!-- navigation.html -->
 <nav class="penguado-nav">
   <ul>
+    <li><a href="index.html"><img src="../assets/images/logo.jpg"> | Penguado - The Core of Connection</a></li>
     <li><a href="index.html">Home</a></li>
     <li><a href="../main-pages/login-signup/index.html">Login & Signup</a></li>
     <li><a href="../main-pages/profile.html">Profile</a></li>
