--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pengaudo - The Core of Connection</title>
+  <title>Penguado - The Core of Connection</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/script.js" defer></script>
 </head>
@@ -18,7 +18,7 @@
   <!-- Banner -->
   <header class="banner">
     <div class="banner-overlay">
-      <h1 class="page-title">Pengaudo - The Core of Connection</h1>
+      <h1 class="page-title">Penguado - The Core of Connection</h1>
       <div class="title-underline"></div>
     </div>
   </header>
