--- a/navigation.html
+++ b/navigation.html
@@ -1,7 +1,12 @@
 <!-- navigation.html -->
 <nav class="penguado-nav">
   <ul>
-    <li><a href="index.html"><img src="../assets/images/logo.jpg" style="width: 10%; height: 10%; margin: 0px; padding: 0px;"> | Penguado - The Core of Connection</a></li>
+    <li>
+      <a href="index.html" style="display: flex; align-items: center; gap: 0.5em;">
+        <img src="../assets/images/logo.jpg" style="height: 30px; width: auto;">
+        <span>Penguado - The Core of Connection</span>
+      </a>
+    </li>
     <li><a href="index.html">Home</a></li>
     <li><a href="../main-pages/login-signup/index.html">Login & Signup</a></li>
     <li><a href="../main-pages/profile.html">Profile</a></li>
