--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <!-- Banner -->
   <header class="banner">
     <div class="banner-overlay">
-      <h1 class="page-title">Penguado - The Core of Connection</h1>
+      <h1 class="page-title">Penguado</h1>
       <div class="title-underline"></div>
+	  <div class="text-center">The Core of Connection...</div>
     </div>
   </header>
 
