--- a/navigation.html
+++ b/navigation.html
@@ -4,7 +4,7 @@
     <li>
       <a href="index.html" style="display: flex; align-items: center; gap: 0.5em;">
         <img src="../assets/images/logo.jpg" style="height: 20px; width: auto;">
-        <span>Penguado</span>
+        <span style="font-weight: bold;">Penguado</span>
       </a>
     </li>
     <li><a href="index.html">Home</a></li>
