--- a/navigation.html
+++ b/navigation.html
@@ -2,7 +2,7 @@
 <nav class="penguado-nav"> 
   <ul>
     <li>
-      <a href="index.html" style="display: flex; align-items: left; gap: 0.5em;">
+      <a href="index.html" style="display: flex; align-items: center; gap: 0.5em;">
         <img src="../assets/images/logo.jpg" style="height: 20px; width: auto;">
         <span style="font-weight: bold;">Penguado</span>
       </a>
