--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="banner-overlay">
       <h1 class="page-title">Penguado</h1>
       <div class="title-underline"></div>
-	  <div class="text-center">The Core of Connection...</div>
+	  <div class="text-center" style="padding-top: 10px;">The Core of Connection...</div>
     </div>
   </header>
 
